<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="568dp"
        android:contentDescription="@string/traffic_rules"
        android:onClick="traffic"
        android:src="@drawable/traffic_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/educational_imaageview_icon"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:onClick="education"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/education_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/medical_image_icon"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:onClick="medical"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/medical_icon"
        app:layout_constraintBottom_toTopOf="@+id/medicanal_textview_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/traffic_click"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/poltics_imageview_icon"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:onClick="politcal"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/politics_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educational_textview" />

    <ImageView
        android:id="@+id/railway_imageview_icon"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="76dp"
        android:onClick="railway"
        android:contentDescription="@string/todo"
        android:src="@drawable/railway_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicanal_textview_entry" />

    <TextView
        android:id="@+id/traffic_click"
        style="@style/entry_text_style"
        android:text="@string/traffic_rules_text"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/educational_textview"
        style="@style/entry_text_style"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/education_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educational_imaageview_icon" />

    <TextView
        android:id="@+id/medicanal_textview_entry"
        style="@style/entry_text_style"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/medicine_rules"
        app:layout_constraintEnd_toStartOf="@+id/poltics_textView_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medical_image_icon" />

    <TextView
        android:id="@+id/poltics_textView_entry"
        style="@style/entry_text_style"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:text="@string/political_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/medicanal_textview_entry"
        app:layout_constraintTop_toBottomOf="@+id/poltics_imageview_icon" />

    <TextView
        android:id="@+id/railway_imageview_entry"
        style="@style/entry_text_style"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:text="@string/railway_rules"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/railway_imageview_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>